--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -20,7 +20,7 @@
             <li>
                 <a href="/todo/delete/<%= index %>">✘ delete</a>
                 <a href="/todo/<%= index %>">✎ edit</a>
-                <%- todo %>
+                <b><%- todo %></b>
             </li>
             <% }); %>
         </ul>
