--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -17,7 +17,7 @@
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
-                <a href="/todo/delete/<%= index %>">✘</a>
+                <a href="/todo/delete/<%= index %>">✘ delete</a>
                 <a href="/todo/<%= index %>">✎</a>
                 <b><%- todo %></b>
             </li>
