--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -13,12 +13,12 @@
     </head>
 
     <body>
-        <h1>Jenkins is just Amazing, Awesome and I will attend Live sessions now it's work with us !</h1>
+        <h1>Jenkins is just Amazing !</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
-                <a href="/todo/delete/<%= index %>">✘ delete</a>
-                <a href="/todo/<%= index %>">✎ edit</a>
+                <a href="/todo/delete/<%= index %>">✘</a>
+                <a href="/todo/<%= index %>">✎</a>
                 <b><%- todo %></b>
             </li>
             <% }); %>
