--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <h1>Jenkins is just Amazing ! </h1>
+        <h1>Jenkins is just Amazing wow! </h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
